<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.otilm</groupId>
        <artifactId>dependencies</artifactId>
        <version>1.4.1</version>
    </parent>

    <artifactId>ejbca-ng-connector</artifactId>
    <version>1.12.0-SNAPSHOT</version>
    <name>ejbca-ng-connector</name>

    <properties>
        <java.version>21</java.version>
        <sonar.organization>ilm</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <sonar.projectKey>ilm_ejbca-ng-connector</sonar.projectKey>
        <!-- Exclude generated and non-unit-testable code from coverage/duplication:
             generated JAX-WS SOAP stubs, DTOs, JPA entities/repositories, Spring config,
             enums, exception types, thin API controllers, Flyway Java migrations, bootstrap. -->
        <sonar.coverage.exclusions>
            src/main/java/com/otilm/ca/connector/ejbca/Application.java,
            src/main/java/com/otilm/ca/connector/ejbca/EndpointsListener.java,
            src/main/java/com/otilm/ca/connector/ejbca/LoggingAdvice.java,
            src/main/java/com/otilm/ca/connector/ejbca/ExceptionHandlingAdvice.java,
            src/main/java/com/otilm/ca/connector/ejbca/EjbcaException.java,
            src/main/java/com/otilm/ca/connector/ejbca/api/**,
            src/main/java/com/otilm/ca/connector/ejbca/config/**,
            src/main/java/com/otilm/ca/connector/ejbca/dto/**,
            src/main/java/com/otilm/ca/connector/ejbca/dao/**,
            src/main/java/com/otilm/ca/connector/ejbca/enums/**,
            src/main/java/com/otilm/ca/connector/ejbca/exception/**,
            src/main/java/com/otilm/ca/connector/ejbca/ws/**,
            src/main/java/db/migration/**,
            <!-- EjbcaConnectionFactory: exercised by EJBCAIT, needs live EJBCA -->
            src/main/java/com/otilm/ca/connector/ejbca/service/impl/EjbcaConnectionFactory.java
        </sonar.coverage.exclusions>
        <sonar.cpd.exclusions>
            src/main/java/com/otilm/ca/connector/ejbca/ws/**,
            src/main/java/com/otilm/ca/connector/ejbca/dto/**,
            src/main/java/com/otilm/ca/connector/ejbca/dao/**
        </sonar.cpd.exclusions>
        <sonar.exclusions>
            src/main/java/com/otilm/ca/connector/ejbca/ws/**,
            src/main/java/db/migration/**
        </sonar.exclusions>
        <!-- CVE overrides: pin transitive deps to patched versions -->
        <tomcat.version>10.1.55</tomcat.version>
        <netty.version>4.1.135.Final</netty.version>
        <postgresql.version>42.7.11</postgresql.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.otilm</groupId>
            <artifactId>interfaces</artifactId>
            <version>2.18.1-SNAPSHOT</version>
        </dependency>

<!--        <dependency>-->
<!--            <groupId>org.ejbca.cesecore</groupId>-->
<!--            <artifactId>cesecore-common</artifactId>-->
<!--            <version>7.7.0</version>-->
<!--            <scope>system</scope>-->
<!--            <systemPath>${project.basedir}/ejbca-libs/cesecore-common-7.7.0.jar</systemPath>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>org.ejbca</groupId>-->
<!--            <artifactId>ejbca-common</artifactId>-->
<!--            <version>7.7.0</version>-->
<!--            <scope>system</scope>-->
<!--            <systemPath>${project.basedir}/ejbca-libs/ejbca-common-7.7.0.jar</systemPath>-->
<!--        </dependency>-->
        <dependency>
            <groupId>com.keyfactor</groupId>
            <artifactId>x509-common-util</artifactId>
            <version>3.2.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.26.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>2.26.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-1.2-api</artifactId>
            <version>2.26.0</version>
        </dependency>

        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcprov-jdk18on</artifactId>
        </dependency>
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcpkix-jdk18on</artifactId>
        </dependency>

        <!-- Spring -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-aop</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>

        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <scope>runtime</scope>
        </dependency>

        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-core</artifactId>
        </dependency>

        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-database-postgresql</artifactId>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
        </dependency>

        <!-- markdown string generator for info attributes -->
        <dependency>
            <groupId>net.steppschuh.markdowngenerator</groupId>
            <artifactId>markdowngenerator</artifactId>
            <version>1.3.1.1</version>
        </dependency>

        <!-- Java EE -->
        <!-- API -->
        <dependency>
            <groupId>jakarta.xml.ws</groupId>
            <artifactId>jakarta.xml.ws-api</artifactId>
        </dependency>

        <!-- Runtime -->
        <dependency>
            <groupId>com.sun.xml.ws</groupId>
            <artifactId>jaxws-rt</artifactId>
        </dependency>

        <!-- Tests -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.junit.vintage</groupId>
                    <artifactId>junit-vintage-engine</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.wiremock</groupId>
            <artifactId>wiremock-standalone</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <configuration>
                    <packagingExcludes>
                        **/META-INF/maven/**,
                    </packagingExcludes>
                    <archive>
                        <addMavenDescriptor>false</addMavenDescriptor>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <executable>true</executable>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>build-info</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.hibernate.orm.tooling</groupId>
                <artifactId>hibernate-enhance-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>compile</phase>
                        <configuration>
                            <failOnError>true</failOnError>
                            <enableLazyInitialization>true</enableLazyInitialization>
                        </configuration>
                        <goals>
                            <goal>enhance</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>@{argLine}</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>github</id>
            <url>https://maven.pkg.github.com/omnitrustilm/*</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>central-portal</id>
            <url>https://central.sonatype.com/repository/maven-snapshots/</url>
        </repository>
    </repositories>

</project>
